--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings":{
+    "Token": "super secret key"
+  },
   "ConnectionStrings": {
   "DevConnection":"Data Source=LHO-IT-27055;Initial Catalog=DatingApp;User ID=sa;Password=sa123"
   },
